# Exage

./: README.md
exage-backend/: .gitignore  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py  test_option2_real.py
exage-backend/agents/: base.py  concept_extractor.py  evaluation_agent.py  gap_detector.py  question_generator.py  response_composer.py  synthesis_agent.py
exage-backend/agents_option2/: concept_extractor_v2.py  consequence_ranker.py  gap_detector_v2.py  pipeline_v2.py  skill_inferrer.py
exage-backend/chat_agents/: __init__.py  concept_extractor.py  evaluation_agent.py  gap_detector.py  question_generator.py  response_composer.py  synthesis_agent.py
exage-backend/pipeline/: runner.py
exage-backend/repo_agents/: concept_extractor_v2.py  consequence_ranker.py  gap_detector_v2.py  pipeline_v2.py  skill_inferrer.py
exage-backend/repo_analysis/: file_scorer.py  framework_detector.py  ingester.py
exage-backend/repo_analysis/ingesters/: github_ingester.py  local_ingester.py
exage-backend/routers/: chat.py  repo_analysis.py  sessions.py
exage-backend/tests/: test_agents.py  test_api.py  test_ingester.py  test_new_agents.py  test_phase2.py  test_phase3.py  test_pipeline.py
exage-frontend/: .gitignore  package-lock.json  package.json
exage-frontend/app/: layout.tsx  page.tsx
exage-frontend/components/: ChatHeader.tsx  GapBlock.tsx  InputArea.tsx  Message.tsx  MessageList.tsx  OnboardingModal.tsx  RepoAnalysisReport.tsx  RepoInputModal.tsx  Sidebar.tsx  StatusBar.tsx  SynthesisBlock.tsx
exage-frontend/lib/: api.ts  types.ts
(+3 files in other folders)
